# vector_perception_ros

./: .gitignore  README.md
vector_perception_msgs/: CMakeLists.txt  package.xml
vector_perception_msgs/msg/: Object3D.msg  Object3DArray.msg
vector_perception_ros2/: CLAUDE.md  README.md  anygrasp_external_usage.md  build_package.sh  package.xml  setup.cfg  setup.py
vector_perception_ros2/launch/: segment_3d.launch.py
vector_perception_ros2/vector_perception_ros2/: grasp_node.py  segment_3d_node.py
